feat(blog): authorName 필드 추가 및 generation nullable 수정
- PostSummaryResponse, PostResponse에 authorName 추가
  목록은 findAllByUserIdIn 배치 로드, 상세는 findByUserId 단건 조회
- Post.generation nullable = false 제거 (서버 사이드 자동 주입 방식과 일치)
- getPosts의 replyTitleById 빈 맵을 Collections.emptyMap()으로 변경
  (Map.of()는 null 키 조회 시 NPE 발생)
- PostServiceTest에 MemberRepository, MemberGenerationRepository 목 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>